Fixed supporter page text overflow
Fixes #383

--- a/src/views/Supporter/Supporter.styl
+++ b/src/views/Supporter/Supporter.styl
@@ -25,7 +25,7 @@
     padding: 1rem;
 
     .main-paragraph {
-        width: 30rem;
+        max-width: 30rem;
         text-align: justify;
 
         .p {
